[gd_scene load_steps=8 format=3 uid="uid://c8dkn4j5jncne"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_yc0ag"]
[ext_resource type="Texture2D" uid="uid://ccg1x1cfglkf0" path="res://Images/32x32 Bear.png" id="2_5x6e4"]
[ext_resource type="Script" path="res://Scripts/Trail.gd" id="3_ojquj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5nela"]
height = 32.0

[sub_resource type="Animation" id="Animation_d3kc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_djgwe"]
resource_name = "damage_flash"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2aqk"]
_data = {
"RESET": SubResource("Animation_d3kc5"),
"damage_flash": SubResource("Animation_djgwe")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
script = ExtResource("1_yc0ag")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_5x6e4")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_5nela")

[node name="Trail" type="Line2D" parent="."]
visible = false
width = 5.0
default_color = Color(0.192157, 0.192157, 0.192157, 0.862745)
script = ExtResource("3_ojquj")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BufferJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TravelCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2aqk")
}

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="BufferJumpTimer" to="." method="_on_buffer_jump_timer_timeout"]
[connection signal="timeout" from="TravelCooldown" to="." method="_on_travel_cooldown_timeout"]
